--- a/Module-2/index1.html
+++ b/Module-2/index1.html
@@ -67,8 +67,7 @@
     </body> -->
 
 
-    <body ng-app="CustomSevicesFactory">
-        <!-- List1 with undefined no.of Items -->
+    <!-- <body ng-app="CustomSevicesFactory">
         <div ng-controller="AddItemController1 as list1">
             <h2>Shopping List 1 with Unlimited No.of items</h2>
             <input type="text" placeholder="Name" ng-model="list1.itemName">
@@ -84,7 +83,6 @@
             <div> Error: {{ list1.errorMessage }} </div>
         </div>
 
-        <!-- List2 with max of 3 Items -->
         <div ng-controller="AddItemController2 as list2">
             <h2>Shopping List 2 with Max of 2 items</h2>
             <input type="text" placeholder="Name" ng-model="list2.itemName">
@@ -98,6 +96,36 @@
                 </li>
             </ol>
             <div> Error: {{ list2.errorMessage }} </div>
+        </div>
+        
+    </body> -->
+
+    <body ng-app="CustomServicesProvider">
+        <li>Step 1: Define Provider Function.</li>
+        <li>Step 2: Register Provider Function with the Module.</li>
+        <li>Step 3: Inject it.</li>
+        <li>Step 4a(optional): Register Config function.</li>
+        <li>Step 4b: Inject Provider into Config function.</li>
+        <br>
+        <div ng-controller="ShoppingListController as list1">
+            <input type="text" ng-model="list1.itemName" placeholder="Name">
+            <input type="text" ng-model="list1.itemQuantity" placeholder="Quantity">
+            <button ng-click="list1.addItem();">Add Item</button>
+            <ol>
+                <li ng-repeat="item in list1.showList">{{item.quantity}} of {{item.name}}
+                <button ng-click="list1.removeItem($index);">Remove Item</button>
+            </li>
+            </ol>
+            <h4>
+                <li>ng-if takes a condition as its value, if it is true,
+                it will show entire div else it will be removed from the DOM tree.</li>
+                <li>ng-show does the same thing, except it will not remove from the DOM tree
+                    it will add extra class, ng-hide and it will just hide the div</li>
+                <li>ng-hide is opposite of ng-show</li>
+            </h4>
+            <div ng-if="list1.errorMessage">
+                Error: {{list1.errorMessage}}
+            </div>
         </div>
         
     </body>
